[tool.poetry]
name = "renku-dummy-format"
version = "0.0.1"
description = "Dummy workflow format exporter for Renku"
authors = ["John Doe <john@examples.com>"]
license = "Apache-2.0"
packages = [
    { include = "dummy_format" }
]
classifiers = [
    "Environment :: Plugins",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Framework :: Renku"
]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
renku = "^1.0.0"

[tool.poetry.plugins."renku"]
dummy_export = "dummy_format.dummy:dummy_plugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
